@@ -1,3 +1,7 @@
+2004-10-31  James Bowes  <bowes@cs.dal.ca>
+
+	* Makefile.am: Minor fixes to pass make distcheck.
+
 2004-10-29  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c (logview_create_window_open_file): New function to
